// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`escaped multiple tags 1`] = `
Array [
  Object {
    "type": 0,
    "value": "I <3 cats. <a>foo</a> <b>bar</b>",
  },
]
`;

exports[`escaped multiple tags with placeholder 1`] = `
Array [
  Object {
    "type": 0,
    "value": "I <3 cats. <a>foo</a> <b>",
  },
  Object {
    "type": 1,
    "value": "bar",
  },
  Object {
    "type": 0,
    "value": "</b>",
  },
]
`;

exports[`escaped tag with rich arg 1`] = `
Array [
  Object {
    "type": 0,
    "value": "I <3 cats.",
  },
]
`;

exports[`nested tag 1`] = `
Array [
  Object {
    "type": 0,
    "value": "this is ",
  },
  Object {
    "children": Array [
      Object {
        "type": 0,
        "value": "nested ",
      },
      Object {
        "children": Array [
          Object {
            "type": 1,
            "value": "placeholder",
          },
        ],
        "type": 8,
        "value": "b",
      },
    ],
    "type": 8,
    "value": "a",
  },
]
`;

exports[`self-closing tag 1`] = `
Array [
  Object {
    "type": 0,
    "value": "this is ",
  },
  Object {
    "type": 0,
    "value": "<br/>",
  },
  Object {
    "type": 0,
    "value": " ",
  },
  Object {
    "children": Array [
      Object {
        "type": 0,
        "value": "nested ",
      },
      Object {
        "children": Array [
          Object {
            "type": 1,
            "value": "placeholder",
          },
        ],
        "type": 8,
        "value": "b",
      },
    ],
    "type": 8,
    "value": "a",
  },
]
`;

exports[`tag in plural 1`] = `
Array [
  Object {
    "type": 0,
    "value": "You have ",
  },
  Object {
    "offset": 0,
    "options": Object {
      "=1": Object {
        "location": undefined,
        "value": Array [
          Object {
            "children": Array [
              Object {
                "type": 0,
                "value": "1",
              },
            ],
            "type": 8,
            "value": "b",
          },
          Object {
            "type": 0,
            "value": " Message",
          },
        ],
      },
      "other": Object {
        "location": undefined,
        "value": Array [
          Object {
            "children": Array [
              Object {
                "type": 7,
              },
            ],
            "type": 8,
            "value": "b",
          },
          Object {
            "type": 0,
            "value": " Messages",
          },
        ],
      },
    },
    "pluralType": "cardinal",
    "type": 6,
    "value": "count",
  },
]
`;

exports[`tag with dash 1`] = `
Array [
  Object {
    "type": 0,
    "value": "this is ",
  },
  Object {
    "type": 0,
    "value": "<br/>",
  },
  Object {
    "type": 0,
    "value": " ",
  },
  Object {
    "children": Array [
      Object {
        "type": 0,
        "value": "nested ",
      },
      Object {
        "children": Array [
          Object {
            "type": 1,
            "value": "placeholder",
          },
        ],
        "type": 8,
        "value": "b",
      },
    ],
    "type": 8,
    "value": "dash-tag",
  },
]
`;

exports[`tag with number arg 1`] = `
Array [
  Object {
    "type": 0,
    "value": "I have ",
  },
  Object {
    "children": Array [
      Object {
        "style": null,
        "type": 2,
        "value": "numCats",
      },
    ],
    "type": 8,
    "value": "foo",
  },
  Object {
    "type": 0,
    "value": " cats.",
  },
]
`;

exports[`tag with rich arg 1`] = `
Array [
  Object {
    "type": 0,
    "value": "I ",
  },
  Object {
    "children": Array [
      Object {
        "type": 0,
        "value": "have",
      },
    ],
    "type": 8,
    "value": "b",
  },
  Object {
    "type": 0,
    "value": " ",
  },
  Object {
    "children": Array [
      Object {
        "style": null,
        "type": 2,
        "value": "numCats",
      },
      Object {
        "type": 0,
        "value": " some string ",
      },
      Object {
        "type": 1,
        "value": "placeholder",
      },
    ],
    "type": 8,
    "value": "foo",
  },
  Object {
    "type": 0,
    "value": " cats.",
  },
]
`;
